some changes and the styles for the nav and footer

--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -1,5 +1,5 @@
 <!-- NAVIGATION TO USE -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-0">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark p-0">
   <div class="container">
     <a class="navbar-brand navbar-title" href="{{ url_for(
       'houses.home'
@@ -18,7 +18,6 @@
         </li>
         <li class="nav-item ml-5 p-2">
           <a class="nav-link" href="{{ url_for('houses.view') }}" >View</a>
-
         </li>
       </ul>
     </div>
