--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,14 +8,14 @@ body {
 
 }
 
-.container {
+#container {
   width: 70%;
-  margin: 3rem auto;
+  margin: 3rem auto 10rem auto;
   text-align: center;
   justify-content: center;
   align-items: center;
 }
-
+/* 
 .container .navbar-title {
   font-size: 2.5rem;
 
@@ -24,4 +24,4 @@ body {
 .container .collapse .navbar-nav .nav-item .nav-link {
   font-size: 1.5rem;
 
-}
+} */
