--- a/static/css/view.css
+++ b/static/css/view.css
@@ -4,7 +4,9 @@
   font-weight: lighter;
 }
 
+
 /* CARD HOUSE */
+
 .card-house {
   border-radius: .3rem;
   margin: 1.5rem 0 2.5rem 0;
@@ -23,16 +25,16 @@
   font-size: 2rem;
 }
 
-.card-house h3, .card-house p {
+.card-house h3,
+.card-house p {
   margin-bottom: 1.5rem;
 }
 
-.card-house .actions-view  {
+.actions-view {
   margin: 0;
 }
 
-
-.card-house .actions-view .buttons {
+.buttons {
   text-decoration: none;
   padding: .5rem;
   margin: 0 .5rem;
@@ -40,21 +42,38 @@
   color: #000;
 }
 
-.card-house .actions-view .buttons:hover {
+.buttons:hover {
   background-color: #bbbbff;
 }
 
+
 /* DISABLE STATUS */
-.card-house .actions-view .disable {
+
+/* for card only */
+.disable {
+  background-color: #bbb;
+
+}
+
+.disable-button {
   color: #000;
   text-decoration: line-through;
   background-color: #aaaaff;
 }
 
+
 /* NO HOUSES P */
+
 p {
   font-size: 1.5rem;
   color: #eee;
+}
+
+@media (max-width: 500px) {
+  /* for a space in buttons */
+  .actions-view a {
+    margin: 1rem auto;
+  }
 }
 
 @media(max-width: 700px) {
