--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
   <!-- NAVIGATION -->
   {% include 'partials/_nav.html' %}
 
-  <div class="container">
+  <div class="container" id="container">
     {% block content %}
     {% endblock %}
   </div>
