--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
   <!-- SCRIPTS -->
   <script src="{{ url_for('static', filename = 'js/popper.min.js') }}"></script>
   <script src="{{ url_for('static', filename = 'js/bootstrap.min.js') }}"></script>
-  <script src="{{ url_for('static', filename = 'js/app.js') }}"></script>
+  <script src="{{ url_for('static', filename = 'js/app.js') }}" type="module"></script>
 
   
 </body>
