old code for bootstrap removed

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename = 'css/about.css') }}">
 <h1>About</h1>
-<p class="p-5">This is a web application for administration of houses. <br> Made with python and using sqlite3 as
+<p class="p-5 text-sm-center">This is a web application for administration of houses. <br> Made with python and using sqlite3 as
   database. <br>
   <br>
   Errors or bugs contact to programmer <a href="mailto:eduarygp@gmail.com">Email.</a>
