--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -9,14 +9,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item ml-5 p-2">
+        <li class="nav-item p-1">
           <a class="nav-link" href="{{ url_for('houses.about') }}">About</a>
         </li>
-        <li class="nav-item ml-5 p-2">
+        <li class="nav-item p-1">
           <a class="nav-link" href="{{ url_for('houses.more') }}" >More</a>
 
         </li>
-        <li class="nav-item ml-5 p-2">
+        <li class="nav-item p-1">
           <a class="nav-link" href="{{ url_for('houses.view') }}" >View</a>
         </li>
       </ul>
